--- a/www/templates/AddFurniture.html
+++ b/www/templates/AddFurniture.html
@@ -1,7 +1,12 @@
-<ion-view title="Add Furniture">
+<ion-view>
+<ion-nav-bar class="bar-dark">
+    <ion-nav-title>
+        Furniture
+    </ion-nav-title>
     <ion-nav-buttons side="right">
-        <button menu-toggle="left" class="button button-clear icon ion-android-add" ng-click="openModal()"></button>
+        <button class="button button-clear icon ion-android-add" ng-click="openModal()"> Add </button>
     </ion-nav-buttons>
+</ion-nav-bar>
     <ion-content padding="'true'" class="has-header">
         <div class="card">
             <div class="item item-divider">
