--- a/www/templates/AddDoors.html
+++ b/www/templates/AddDoors.html
@@ -18,54 +18,46 @@
             type="tel" 
             ng-model="door.width" 
             placeholder="feet" 
-            ng-change="addDoor()"
             required
             ng-pattern="/^\d*\.?\d*$/">
           </label>
         </div>
 
-        <div class="col col-55">
+        <div class="col col-45">
+             <label class="item item-input item-select" id="margin-item">
+                 <span class="input-label">Type</span>
             <select 
             name="select"
+            id="doortypelist"
             class="ion-input-select" 
-            id="margin-item">
+            id="margin-item" ng-model="temp" ng-change="addD()">
               <option selected>Single</option>
               <option>Double</option>
               <option>Sliding</option>
             </select>
         </div>  
-<!--         <div class="col-55">
-          <label class="item item-input item-select" id="margin-item">
-            <span class="input-label">Type</span>
-            <select
-            id="doortypelist"
-            ng-model="item"
-            ng-change="addD()"
-            required>
-              <option>Single</option>
-              <option selected>Double</option>
-              <option>Sliding</option>
-            </select>
-          </label>
-        </div> -->
       </div>
-      <div class="row">
+      <div >
         <div class="col form-error assertive text-center"
-        ng-show="doorform.width.$error.pattern">
+        ng-show="doorForm.width.$error.pattern">
           Invalid Input
         </div>
-        <div class="col form-error assertive text-center" ng-show="doorform.width.$error.required && doorform.width.$error.pattern">
+        <div class="col form-error assertive text-center" 
+             ng-show="doorForm.width.$error.required">
           Width is required
         </div>
       </div>  
-      </div>
-      <button class="button button-full button-dark" ng-disabled="!doorForm.$valid" ng-click="addDoor()">
+    </form>
+        <button class="button button-full button-dark" ng-disabled="!doorForm.$valid" ng-click="addDoor()">
       Add Door
       </button>
-    </form>
 
     <div class="room-container">
-      <div  id="roomholder" style="border:5px solid black;width:90vw;height:90vw;margin: 0 auto;">
+      <div class="rhold"  id="roomholder" style="border:5px solid black;
+                                   width:{{cwidth}};
+                                   height:{{cheight}};
+                                   margin: 0 auto;
+                                   position:relative" >
             
       </div>
     </div>
@@ -73,11 +65,11 @@
   </ion-content>
   <div class="tabs tabs-dark tabs-icon-top">
     <a class="tab-item">
-      <i class="icon ion-arrow-left-a" ng-click="goBack()"></i><!--ng-click="bedroomSize(user)"-->
+      <i class="icon ion-arrow-left-a" ng-click="goBack()"></i>
       BACK
     </a>
     <a class="tab-item">
-      <i class="icon ion-arrow-right-a" ng-click="addWindows(user)"></i>
+      <i class="icon ion-arrow-right-a" ng-click="addWindows()"></i>
       NEXT
     </a>
   </div>
